# solace-agent-mesh-core-plugins-nram

./: .gitignore  CLAUDE.md  LOGGING_CONFIGURATION.md  README.md  TESTING_CHECKLIST.md  git-push
sam-bedrock-agent/: README.md  pyproject.toml  solace-agent-mesh-plugin.yaml
sam-bedrock-agent/configs/agents/: bedrock_agent.yaml
sam-bedrock-agent/src/agents/bedrock_agent/: bedrock_agent_agent_component.py  bedrock_agent_runtime.py
sam-bedrock-agent/src/agents/bedrock_agent/actions/: invoke_agent.py  invoke_flow.py
sam-geo-information/: README.md  pyproject.toml  solace-agent-mesh-plugin.yaml
sam-geo-information/configs/agents/: geo_information.yaml
sam-geo-information/src/agents/geo_information/: __init__.py  geo_information_agent_component.py
sam-geo-information/src/agents/geo_information/actions/: __init__.py  city_to_coordinates.py  city_to_timezone.py  get_weather.py
sam-geo-information/src/agents/geo_information/services/: __init__.py  geocoding_service.py  weather_service.py
sam-mcp-server/: README.md  pyproject.toml  solace-agent-mesh-plugin.yaml
sam-mcp-server/configs/agents/: mcp_server.yaml
sam-mcp-server/src/agents/mcp_server/: async_server.py  mcp_server_agent_component.py
sam-mcp-server/src/agents/mcp_server/actions/: mcp_server_action.py
sam-mermaid/: README.md  pyproject.toml  solace-agent-mesh-plugin.yaml
sam-mermaid/configs/agents/: mermaid.yaml
sam-mermaid/src/agents/mermaid/: mermaid_agent_component.py
sam-mermaid/src/agents/mermaid/actions/: mermaid_draw.py
sam-ml-datasets/: README.md  pyproject.toml  solace-agent-mesh-plugin.yaml
sam-ml-datasets/configs/agents/: ml_datasets.yaml
sam-ml-datasets/src/: __init__.py
sam-ml-datasets/src/agents/: __init__.py
sam-ml-datasets/src/agents/ml_datasets/: __init__.py  ml_datasets_agent_component.py
sam-ml-datasets/src/agents/ml_datasets/actions/: __init__.py  get_dataset.py  list_datasets.py
sam-ml-datasets/src/agents/ml_datasets/services/: __init__.py  dataset_service.py
sam-ml-datasets/tests/: __init__.py  test_basic.py
sam-ml-pandas/: README.md  TROUBLESHOOTING.md  example_collaborative_workflow.md  example_config.sh  example_dynamic_config.yaml  pyproject.toml  solace-agent-mesh-plugin.yaml
sam-ml-pandas/configs/agents/: ml_pandas.yaml
sam-ml-pandas/src/: __init__.py
sam-ml-pandas/src/agents/: __init__.py
sam-ml-pandas/src/agents/ml_pandas/: __init__.py  ml_pandas_agent_component.py
sam-ml-pandas/src/agents/ml_pandas/actions/: __init__.py  data_analysis.py  data_loader.py  data_query.py  data_summarizer.py  simple_ml.py
sam-ml-pandas/src/agents/ml_pandas/services/: __init__.py  data_service.py
sam-ml-pandas/tests/: test_basic.py
sam-ml-scikit-learn/: pyproject.toml  solace-agent-mesh-plugin.yaml
sam-ml-scikit-learn/configs/agents/: ml_scikit_learn.yaml
sam-ml-scikit-learn/src/: __init__.py
sam-ml-scikit-learn/src/agents/: __init__.py
sam-ml-scikit-learn/src/agents/ml_scikit_learn/: ml_scikit_learn_agent_component.py
sam-ml-scikit-learn/src/agents/ml_scikit_learn/actions/: classification_analysis.py  outlier_detection.py
sam-ml-scikit-learn/src/agents/ml_scikit_learn/services/: __init__.py  ml_service.py
sam-mongodb/: README.md  pyproject.toml  solace-agent-mesh-plugin.yaml
sam-mongodb/configs/agents/: mongodb.yaml
sam-mongodb/src/agents/mongodb/: mongodb_agent_component.py
sam-mongodb/src/agents/mongodb/actions/: search_query.py
sam-rag/: README.md  pyproject.toml  solace-agent-mesh-plugin.yaml  vector_database_integration_overview.md
sam-rag/configs/agents/: rag.yaml  rag_multi_cloud.yaml  rag_with_google_drive.yaml
sam-rag/docs/: architecture.md  configuration.md  index.md  tutorial.md
sam-rag/docs/components/: augmentation.md  embedder.md  preprocessor.md  retriever.md  scanner.md  splitter.md  vector_db.md
sam-rag/sam_rag/: README.md  pyproject.toml
sam-rag/sam_rag/configs/agents/: rag.yaml
sam-rag/sam_rag/src/agents/rag/: rag_agent_component.py
sam-rag/sam_rag/src/agents/rag/actions/: ingestion.py  sample_action.py  scan.py
sam-rag/sam_rag/src/agents/rag/services/: pipeline.py
sam-rag/src/agents/rag/: rag_agent_component.py
sam-rag/src/agents/rag/actions/: ingest.py  ingestion.py  rag.py
sam-rag/src/agents/rag/services/: pipeline.py
sam-rag/src/agents/rag/services/database/: connect.py  (+6 more)
sam-rag/tests/: __init__.py  run_tests.py
sam-rag/tests/unit/: __init__.py  test_splitters.py
sam-rag/tests/unit/test_preprocessor/: __init__.py  test_document_preprocessor.py  test_enhanced_preprocessor.py  test_preprocessor_base.py  test_text_preprocessor.py
sam-rag/tests/unit/test_rag/: __init__.py  test_augmentor.py  test_retriever.py
sam-sql-database/: README.md  pyproject.toml
sam-sql-database/configs/agents/: sql_database.yaml
sam-sql-database/example-data/abc_coffee_co/: customers.csv  employees.csv  inventory.csv  order_history.csv  order_items.csv  orders.csv  product_categories.csv  product_specifications.csv  products.csv  ps.csv  sales_call_logs.csv  support_ticket_comments.csv  support_tickets.csv
sam-sql-database/src/: __init__.py
sam-sql-database/src/agents/sql_database/: sql_database_agent_component.py
sam-sql-database/src/agents/sql_database/actions/: search_query.py
sam-sql-database/src/agents/sql_database/services/: csv_import_service.py  database_service.py
sam-sql-database/tests/scripts/: setup_test_db.py
solace-event-mesh/: README.md  pyproject.toml  solace-agent-mesh-plugin.yaml
solace-event-mesh/configs/agents/: solace_event_mesh.yaml
solace-event-mesh/docs/: event_mesh_gateway.md
solace-event-mesh/interfaces/: solace-event-mesh-default-config.yaml  solace-event-mesh-flows.yaml
solace-event-mesh/src/: __init__.py
solace-event-mesh/src/agents/solace_event_mesh/: solace_event_mesh_agent_component.py
solace-event-mesh/src/agents/solace_event_mesh/actions/: broker_request_response.py
solace-event-mesh/src/gateways/solace_event_mesh/: solace_event_mesh_input.py  solace_event_mesh_output.py
solace-event-mesh/tests/: test_event_mesh_input.py  test_event_mesh_output.py
(+99 files in other folders)
