[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sam-bedrock-agent"
dynamic = ["version"]
authors = [
  { name="Cyrus Mobini", email="" },
]
description = "Plugin to connect to Amazon bedrock agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build.targets.wheel.force-include]
"src" = "sam_bedrock_agent/src"
"interfaces" = "sam_bedrock_agent/interfaces"
"configs" = "sam_bedrock_agent/configs"
"solace-agent-mesh-plugin.yaml" = "sam_bedrock_agent/solace-agent-mesh-plugin.yaml"

[tool.hatch.build.targets.wheel]
packages = ["sam_bedrock_agent"]

[tool.hatch.version]
path = "src/__init__.py"

