[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sam_geo_information"
dynamic = ["version"]
authors = [
  { name="Edward Funnekotter", email="edward.funnekotter@solace.com" },
]
description = "A plugin that provides comprehensive geographic information services including location, timezone, and weather data"
readme = "README.md"
requires-python = ">=3.10.16"

dependencies = [
    "requests>=2.31.0",
    "timezonefinder>=6.2.0",
    "pytz>=2024.1"
]

[tool.hatch.build.targets.wheel.force-include]
"src" = "sam_geo_information/src"
"configs" = "sam_geo_information/configs"
"solace-agent-mesh-plugin.yaml" = "sam_geo_information/solace-agent-mesh-plugin.yaml"

[tool.hatch.build.targets.wheel]
packages = ["sam_geo_information"]

[tool.hatch.version]
path = "src/__init__.py"
