[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sam-mcp-server"
dynamic = ["version"]
authors = [
  { name="Edward Funnekotter", email="edward.funnekotter@solace.com" },
]
description = "This adds both an agent to talk to MCP servers and a gateway for SAM to act as an MCP server"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
  "mcp>=0.9.1"
]

[tool.hatch.build.targets.wheel.force-include]
"src" = "sam_mcp_server/src"
"configs" = "sam_mcp_server/configs"
"solace-agent-mesh-plugin.yaml" = "sam_mcp_server/solace-agent-mesh-plugin.yaml"

[tool.hatch.build.targets.wheel]
packages = ["sam_mcp_server"]

[tool.hatch.version]
path = "src/__init__.py"

