[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sam-mermaid"
dynamic = ["version"]
authors = [
  { name="Hugo" },
]
description = "This plugin is used to generate visualizations using Mermaid.js"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = []

[tool.hatch.build.targets.wheel.force-include]
"src" = "sam_mermaid/src"
"interfaces" = "sam_mermaid/interfaces"
"configs" = "sam_mermaid/configs"
"solace-agent-mesh-plugin.yaml" = "sam_mermaid/solace-agent-mesh-plugin.yaml"

[tool.hatch.build.targets.wheel]
packages = ["sam_mermaid"]

[tool.hatch.version]
path = "src/__init__.py"

