[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sam_ml_datasets"
dynamic = ["version"]
authors = [
  { name="Your Name", email="your.email@solace.com" },
]
description = "A plugin that provides ML datasets for training and analysis including sklearn, seaborn, and synthetic datasets"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    "scikit-learn>=1.3.0",
    "seaborn>=0.11.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
]

[tool.hatch.build.targets.wheel.force-include]
"src" = "sam_ml_datasets/src"
"configs" = "sam_ml_datasets/configs"
"solace-agent-mesh-plugin.yaml" = "sam_ml_datasets/solace-agent-mesh-plugin.yaml"

[tool.hatch.build.targets.wheel]
packages = ["sam_ml_datasets"]

[tool.hatch.version]
path = "src/__init__.py"