[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sam_ml_scikit_learn"
dynamic = ["version"]
authors = [
  { name="Your Name", email="edward.funnekotter@solace.com" },
]
description = "A plugin that provides machine learning capabilities using scikit-learn for regression, classification, EDA, and outlier detection"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "scipy>=1.10.0",
    "joblib>=1.3.0",
]

[tool.hatch.build.targets.wheel.force-include]
"src" = "sam_ml_scikit_learn/src"
"configs" = "sam_ml_scikit_learn/configs"
"solace-agent-mesh-plugin.yaml" = "sam_ml_scikit_learn/solace-agent-mesh-plugin.yaml"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
path = "src/__init__.py" 