[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sam_mongodb"
dynamic = ["version"]
authors = [
  { name="Cyrus Mobini", email="cyrus.mobini@solace.com" },
]
description = "A plugin the provides mongodb agent to perform complex queries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel.force-include]
"src" = "sam_mongodb/src"
"interfaces" = "sam_mongodb/interfaces"
"configs" = "sam_mongodb/configs"
"solace-agent-mesh-plugin.yaml" = "sam_mongodb/solace-agent-mesh-plugin.yaml"

[tool.hatch.build.targets.wheel]
packages = ["sam_mongodb"]

[tool.hatch.version]
path = "src/__init__.py"

