[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sam_mongodb"
dynamic = ["version"]
authors = [
  { name="Cyrus Mobini", email="cyrus.mobini@solace.com" },
]
description = "A plugin that provides a MongoDB agent to perform complex queries based on natural language"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymongo>=4.0", # Added pymongo dependency
    "python-dateutil>=2.8" # Added dateutil for date parsing in queries
]

[tool.hatch.build.targets.wheel.force-include]
"src" = "sam_mongodb/src"
"interfaces" = "sam_mongodb/interfaces"
"configs" = "sam_mongodb/configs"
"solace-agent-mesh-plugin.yaml" = "sam_mongodb/solace-agent-mesh-plugin.yaml"

[tool.hatch.build.targets.wheel]
packages = ["sam_mongodb"]

[tool.hatch.version]
path = "src/__init__.py"

