[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sam_sql_database"
dynamic = ["version"]
authors = [
  { name="Your Name", email="edward.funnekotter@solace.com" },
]
description = "A plugin that provides SQL database query capabilities with natural language processing"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    "mysql-connector-python>=8.3.0",
    "psycopg2-binary>=2.9.9",
    "SQLAlchemy>=2.0.25",
]

[tool.hatch.build.targets.wheel.force-include]
"src" = "sam_sql_database/src"
"configs" = "sam_sql_database/configs"
"solace-agent-mesh-plugin.yaml" = "sam_sql_database/solace-agent-mesh-plugin.yaml"

[tool.hatch.build.targets.wheel]
packages = ["sam_sql_database"]

[tool.hatch.version]
path = "src/__init__.py"
