[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "solace-event-mesh"
dynamic = ["version"]
authors = [
  {  name="Edward Funnekotter", email="edward.funnekotter@solace.com" },
]
description = "This plugin adds a Gateway and Agent to connect to Solace's Event Mesh and Event Brokers"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
  "solace-ai-connector"
]

[tool.hatch.build.targets.wheel.force-include]
"src" = "solace_event_mesh/src"
"interfaces" = "solace_event_mesh/interfaces"
"configs" = "solace_event_mesh/configs"
"solace-agent-mesh-plugin.yaml" = "solace_event_mesh/solace-agent-mesh-plugin.yaml"

[tool.hatch.build.targets.wheel]
packages = ["solace_event_mesh"]

[tool.hatch.version]
path = "src/__init__.py"

