[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sam_rag"
dynamic = ["version"]
authors = [
  { name="Alireza Parvizimosaed", email="" },
]
description = "A document-ingesting agent that monitors specified directories, keeping stored documents up to date in a vector database for Retrieval-Augmented Generation (RAG) queries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build.targets.wheel.force-include]
"src" = "sam_rag/src"
"interfaces" = "sam_rag/interfaces"
"configs" = "sam_rag/configs"
"solace-agent-mesh-plugin.yaml" = "sam_rag/solace-agent-mesh-plugin.yaml"

[tool.hatch.build.targets.wheel]
packages = ["sam_rag"]

[tool.hatch.version]
path = "src/__init__.py"

