[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sam_rag"
dynamic = ["version"]
authors = [
  { name="Alireza Parvizimosaed", email="" },
]
description = "A document-ingesting agent that monitors specified directories, keeping stored documents up to date in a vector database for Retrieval-Augmented Generation (RAG) queries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyPDF2>=3.0.0",  # For PDF processing
    "python-docx>=0.8.11",  # For DOCX processing
    "beautifulsoup4>=4.11.1",  # For HTML processing
    "pandas>=1.5.0",  # For Excel processing
    "odfpy>=1.4.1",  # For ODT processing
    "lxml>=4.9.1",  # XML parser for BeautifulSoup
    "PyYAML~=6.0.2",  # For YAML processing
    "beautifulsoup4>=4.13.3",  # Updated to the latest version
    "openai~=1.66.3",  # For OpenAI API access
    "qdrant-client~=1.13.3",  # For Qdrant vector database access
    "PyPDF2~=3.0.1",  # For PDF processing
    "watchdog==6.0.0"  # Fixed syntax for watchdog dependency
]

[project.optional-dependencies]
nlp = [
    "nltk>=3.7",  # For more advanced text processing
    "spacy>=3.4.0",  # For advanced NLP preprocessing
    "langdetect>=1.0.9",  # For language detection
]

[tool.hatch.build.targets.wheel.force-include]
"src" = "sam_rag/src"
"interfaces" = "sam_rag/interfaces"
"configs" = "sam_rag/configs"
"solace-agent-mesh-plugin.yaml" = "sam_rag/solace-agent-mesh-plugin.yaml"

[tool.hatch.build.targets.wheel]
packages = ["sam_rag"]

[tool.hatch.version]
path = "src/__init__.py"

